# script_multimedia_scraper

./: .gitignore  README.md  main.py  pyproject.toml
core/: config.py  utils.py
modules/: anime_scraper.py  base_scraper.py  book_scraper.py  manga_scraper.py  movie_scraper.py  music_scraper.py
static/: example_book.txt  example_manga.txt  example_movie.txt  example_music.txt  example_serie.txt  links.txt
