[tool.poetry]
name = "multimedia scraper"
version = "0.1.0"
description = "Pending description"
authors = ["tyronejose <alt.tyronejose@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
colorlog = "^6.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
